fixed position for project elements on mobile

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -89,7 +89,7 @@
     }
 
     .projectEle:nth-child(2) {
-        margin-top: 10em;
+        margin-top: 20em;
     }
 }
 
